<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit_event_details"
        android:background="@color/purple_500"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/event_name"/>

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_input"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/event_date"/>

    <EditText
        android:id="@+id/editEventDate"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="date"
        android:background="@drawable/rounded_input"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/event_time"/>

    <EditText
        android:id="@+id/editEventTime"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="time"
        android:background="@drawable/rounded_input"
        android:gravity="center" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_input"
        android:textSize="20sp"
        android:text="@string/update"/>



</LinearLayout>